Fix menu centering on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -238,6 +238,8 @@ a:hover {
 @media only screen and (max-width: 1128px) {
     .page-buttons {
         justify-content: center !important;
+        padding-right: 0px;
+        padding-top: 25px;
     }
 }
 
